--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -41,11 +41,12 @@ Software.
 
     <!-- Nepcha Analytics (nepcha.com) -->
     <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
-    <script
-      defer
-      data-site="YOUR_DOMAIN_HERE"
-      src="https://api.nepcha.com/js/nepcha-analytics.js"
-    ></script>
+   <script
+  defer
+  data-site="main--vinlandkitchen.netlify.app"
+  src="https://api.nepcha.com/js/nepcha-analytics.js"
+></script>
+
   </head>
 
   <body>
